fix(zerozone2): partition open conflict (#2838)
Signed-off-by: Robin Han <hanxvdovehx@gmail.com>